rnsc/tests/snapshots/error-parser-outside_class_directive-after_class_dir-dot_method.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end

.method public static main ([Ljava/lang/String;)V
----- STDERR -----
[E-008] Error: unexpected directive after class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/after_class_dir/dot_method.rns:6:1 ]
   │
 6 │ .method public static main ([Ljava/lang/String;)V
   │ ───┬───  
   │    ╰───── valid context for .method directive is: 'class body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
