rnsc/tests/snapshots/error-parser-outside_class_directive-after_class_dir-dot_space.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end
    . whaaat?
----- STDERR -----
[E-008] Error: unexpected identifier outside class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/after_class_dir/dot_space.rns:5:5 ]
   │
 5 │     . whaaat?
   │     ┬  
   │     ╰── valid context for . identifier is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
