rnsc/tests/snapshots/error-parser-outside_class_directive-after_class_dir-integer.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end
42 ; the answer
----- STDERR -----
[E-008] Error: unexpected identifier after class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/after_class_dir/integer.rns:5:1 ]
   │
 5 │ 42 ; the answer
   │ ─┬  
   │  ╰── valid context for 42 identifier is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
